; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-banout.c_banout_append_char.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-banout.c_banout_append_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BannerOutput = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @banout_append_char(%struct.BannerOutput* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.BannerOutput*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  store %struct.BannerOutput* %0, %struct.BannerOutput** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = trunc i32 %8 to i8
  store i8 %9, i8* %7, align 1
  %10 = load %struct.BannerOutput*, %struct.BannerOutput** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @banout_append(%struct.BannerOutput* %10, i32 %11, i8* %7, i32 1)
  ret void
}

declare dso_local i32 @banout_append(%struct.BannerOutput*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
